Fix jumping content

--- a/homework_3/css/style.css
+++ b/homework_3/css/style.css
@@ -32,9 +32,15 @@
 
 .header-wrapper-left {
       display: flex;
-      align-items: center;
+      margin-top: 8px;
       
 }
+
+.header-wrapper-left:hover {
+    text-decoration: none;
+    cursor: pointer;
+}
+
 .header-logo {
       color: #ffffff;
       text-transform: uppercase;
@@ -50,6 +56,7 @@
     font-weight: 400;
     width: 44px;
     margin-left: 7px;
+    margin-top: 3px;
 }
 
   /* .header-logo :after {
@@ -76,12 +83,22 @@
     text-transform: capitalize;
 }
 
-.header-menu-element:hover:after {
+.header-menu-element:hover {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.header-menu-element:after {
     content: '';
     display: block;
     margin: 13px auto 0;
     width: 2px;
     height: 2px;
+    border-left: 20px transparent solid;
+    border-right: 20px transparent solid;
+}
+
+.header-menu-element:hover:after {
     border-left: 20px #008ed6 solid;
     border-right: 20px #008ed6 solid;
 }
